dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/IOPath.cpp)

A2SDF_MAJOR_VERSION=0
A2SDF_MINOR_VERSION=9b
A2SDF_VERSION=$A2SDF_MAJOR_VERSION.$A2SDF_MINOR_VERSION

AC_SUBST(A2SDF_MAJOR_VERSION)
AC_SUBST(A2SDF_MINOR_VERSION)
AC_SUBST(A2SDF_VERSION)

# For automake.
VERSION=$A2SDF_VERSION
PACKAGE=a2sdf

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_PATH_POPT
AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
doc/Makefile
])
