dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/alcbanner.c)

ALCBANNER_MAJOR_VERSION=1
ALCBANNER_MINOR_VERSION=1
ALCBANNER_VERSION=$ALCBANNER_MAJOR_VERSION.$ALCBANNER_MINOR_VERSION

AC_SUBST(ALCBANNER_MAJOR_VERSION)
AC_SUBST(ALCBANNER_MINOR_VERSION)
AC_SUBST(ALCBANNER_VERSION)

# For automake.
VERSION=$ALCBANNER_VERSION
PACKAGE=alcbanner

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
