dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/attila.sh)

ATTILA_MAJOR_VERSION=0
ATTILA_MINOR_VERSION=1
ATTILA_VERSION=$ATTILA_MAJOR_VERSION.$ATTILA_MINOR_VERSION

AC_SUBST(ATTILA_MAJOR_VERSION)
AC_SUBST(ATTILA_MINOR_VERSION)
AC_SUBST(ATTILA_VERSION)

# For automake.
VERSION=$ATTILA_VERSION
PACKAGE=attila

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_CHECK_PROG(SED, sed, sed)
AC_PROG_MAKE_SET


changequote(,)dnl
if test -z $SED ; then
   echo "Cannot find sed here! Quiting, ..."
   exit 1
fi
changequote([,])dnl


dnl Checks for typedefs, structures, and compiler characteristics.

AM_ALLIANCE

AC_OUTPUT([
Makefile
etc/Makefile
src/Makefile
doc/Makefile
doc/man1/Makefile
doc/attila/Makefile
])
