dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/b2f_main.c)

B2F_MAJOR_VERSION=1
B2F_MINOR_VERSION=2
B2F_VERSION=$B2F_MAJOR_VERSION.$B2F_MINOR_VERSION

AC_SUBST(B2F_MAJOR_VERSION)
AC_SUBST(B2F_MINOR_VERSION)
AC_SUBST(B2F_VERSION)

# For automake.
VERSION=$B2F_VERSION
PACKAGE=b2f

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_LIB(gen, basename)
AC_CHECK_LIB(iberty, basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
])
