dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/bog_main.c)

BOOG_MAJOR_VERSION=1
BOOG_MINOR_VERSION=5
BOOG_VERSION=$BOOG_MAJOR_VERSION.$BOOG_MINOR_VERSION

AC_SUBST(BOOG_MAJOR_VERSION)
AC_SUBST(BOOG_MINOR_VERSION)
AC_SUBST(BOOG_VERSION)

# For automake.
VERSION=$BOOG_VERSION
PACKAGE=boog

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl path for libs and includes
AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
])
