dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/boom_main.c)

BOOM_MAJOR_VERSION=1
BOOM_MINOR_VERSION=2
BOOM_VERSION=$BOOM_MAJOR_VERSION.$BOOM_MINOR_VERSION

AC_SUBST(BOOM_MAJOR_VERSION)
AC_SUBST(BOOM_MINOR_VERSION)
AC_SUBST(BOOM_VERSION)

# For automake.
VERSION=$BOOM_VERSION
PACKAGE=boom

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CHECK_LIB(m, exp)
AC_CHECK_LIB(gen,basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
