dnl $Id: configure.in,v 1.3 2002/07/15 22:23:23 jpc Exp $

AC_INIT(doc/sxlib.5)
AM_INIT_AUTOMAKE(cells, 1.1)

AC_PROG_INSTALL

AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
src/dp_sxlib/Makefile
src/padlib/Makefile
src/rflib/Makefile
src/sxlib/Makefile
src/ramlib/Makefile
src/romlib/Makefile
])
