# $Id: Makefile.am,v 1.5 2012/04/17 09:04:30 alliance Exp $

SUBDIRS = doc etc

EXTRA_DIST = alliance.spec.in alliance-fedora.spec \
             alliance.fedora \
             alliance-examples-go-all.sh alliance-examples-go-all-clean.sh \
             alliance-tutorials-go-all.sh alliance-tutorials-go-all-clean.sh \
             dreal.png  graal.png  xfsm.png  xgra.png  xpat.png  xsch.png  xvpn.png \
             dreal.desktop  graal.desktop  xfsm.desktop  xgra.desktop  xpat.desktop \
             xsch.desktop  xvpn.desktop
