# $Id: Makefile.am,v 1.6 2012/05/03 18:10:01 jpc Exp $

SUBDIRS = doc etc

EXTRA_DIST = alliance.spec.in alliance-fedora.spec \
             alliance.fedora \
             alliance-tutorials-go-all.sh alliance-tutorials-go-all-clean.sh \
             dreal.png  graal.png  xfsm.png  xgra.png  xpat.png  xsch.png  xvpn.png \
             dreal.desktop  graal.desktop  xfsm.desktop  xgra.desktop  xpat.desktop \
             xsch.desktop  xvpn.desktop
