dnl Process this file with autoconf to produce a configure script.
AC_INIT(overview/overview.tex)

DOC_MAJOR_VERSION=1
DOC_MINOR_VERSION=0
DOC_VERSION=$DOC_MAJOR_VERSION.$DOC_MINOR_VERSION

AC_SUBST(DOC_MAJOR_VERSION)
AC_SUBST(DOC_MINOR_VERSION)
AC_SUBST(DOC_VERSION)

# For automake.
VERSION=$DOC_VERSION
PACKAGE=documentation

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_MAKE_SET


AM_ALLIANCE

AC_OUTPUT([
Makefile
tutorials/Makefile
alliance-examples/Makefile
])
