dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)

FLATBEH_MAJOR_VERSION=1
FLATBEH_MINOR_VERSION=1
FLATBEH_VERSION=$FLATBEH_MAJOR_VERSION.$FLATBEH_MINOR_VERSION

AC_SUBST(FLATBEH_MAJOR_VERSION)
AC_SUBST(FLATBEH_MINOR_VERSION)
AC_SUBST(FLATBEH_VERSION)

# For automake.
VERSION=$FLATBEH_VERSION
PACKAGE=flatbeh

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_LIB(gen,basename)

dnl For alliance path lib and includes
AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
])
