dnl $Id: configure.in,v 1.3 2002/10/02 15:42:53 czo Exp $

AC_INIT(src/flatlo.c)
AM_INIT_AUTOMAKE(flatlo, 1.4)

AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_CONST

AC_CHECK_LIB(gen, basename)
AC_CHECK_LIB(iberty, basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
])
