dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/fsp_main.c)

FSP_MAJOR_VERSION=1
FSP_MINOR_VERSION=1
FSP_VERSION=$FSP_MAJOR_VERSION.$FSP_MINOR_VERSION

AC_SUBST(FSP_MAJOR_VERSION)
AC_SUBST(FSP_MINOR_VERSION)
AC_SUBST(FSP_VERSION)

# For automake.
VERSION=$FSP_VERSION
PACKAGE=fsp

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_LIB(gen,basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
