dnl
dnl This file is part of the Alliance CAD System
dnl Copyright (C) Laboratoire LIP6 - Département ASIM
dnl Universite Pierre et Marie Curie
dnl 
dnl Home page          : http://www-asim.lip6.fr/alliance/
dnl E-mail support     : mailto:alliance-support@asim.lip6.fr
dnl 
dnl This library is free software; you  can redistribute it and/or modify it
dnl under the terms  of the GNU Library General Public  License as published
dnl by the Free Software Foundation; either version 2 of the License, or (at
dnl your option) any later version.
dnl 
dnl Alliance VLSI  CAD System  is distributed  in the hope  that it  will be
dnl useful, but WITHOUT  ANY WARRANTY; without even the  implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
dnl Public License for more details.
dnl 
dnl You should have received a copy  of the GNU General Public License along
dnl with the GNU C Library; see the  file COPYING. If not, write to the Free
dnl Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl
AC_INIT(src/genpat.sh)
AM_INIT_AUTOMAKE(genpat, 3.3)
AC_PROG_CC
AC_PROG_RANLIB
AC_CHECK_PROG(SED, sed, sed)
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_MAKE_SET

changequote(,)dnl
if test -z $SED ; then
   echo "Cannot find sed here! Quiting, ..."
   exit 1
fi
changequote([,])dnl

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
doc/Makefile
])
