dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/graal.c)

GRAAL_MAJOR_VERSION=1
GRAAL_MINOR_VERSION=27
GRAAL_VERSION=$GRAAL_MAJOR_VERSION.$GRAAL_MINOR_VERSION

AC_SUBST(GRAAL_MAJOR_VERSION)
AC_SUBST(GRAAL_MINOR_VERSION)
AC_SUBST(GRAAL_VERSION)

# For automake.
VERSION=$GRAAL_VERSION
PACKAGE=graal

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_FIND_MOTIF

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
man1/Makefile
])
