dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/growstk.c)

GROWSTK_MAJOR_VERSION=1
GROWSTK_MINOR_VERSION=5
GROWSTK_VERSION=$GROWSTK_MAJOR_VERSION.$GROWSTK_MINOR_VERSION

AC_SUBST(GROWSTK_MAJOR_VERSION)
AC_SUBST(GROWSTK_MINOR_VERSION)
AC_SUBST(GROWSTK_VERSION)

# For automake.
VERSION=$GROWSTK_VERSION
PACKAGE=growstk

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_LIB(m, sqrt)

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
])
