
AC_INIT(src/apr.h)

APR_CUR=1
APR_REV=3
APR_REL=0

APR_VERSION=$APR_CUR.$APR_REV
APR_DLL_VERSION=${APR_CUR}:${APR_REV}:${APR_REL}

AC_SUBST(APR_CUR)
AC_SUBST(APR_REV)
AC_SUBST(APR_REL)
AC_SUBST(APR_DLL_VERSION)

AM_INIT_AUTOMAKE(apr, $APR_VERSION)
AC_PROG_INSTALL
AC_PROG_CC
AC_HEADER_STDC
AC_C_CONST
AC_TYPE_SIGNAL
AC_FUNC_VFORK
AM_PROG_LIBTOOL

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
])
