dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/k2f_main.c)

K2F_MAJOR_VERSION=1
K2F_MINOR_VERSION=1
K2F_VERSION=$K2F_MAJOR_VERSION.$K2F_MINOR_VERSION

AC_SUBST(K2F_MAJOR_VERSION)
AC_SUBST(K2F_MINOR_VERSION)
AC_SUBST(K2F_VERSION)

# For automake.
VERSION=$K2F_VERSION
PACKAGE=k2f

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
