dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/l2p.c)

L2P_MAJOR_VERSION=1
L2P_MINOR_VERSION=12
L2P_VERSION=$L2P_MAJOR_VERSION.$L2P_MINOR_VERSION

AC_SUBST(L2P_MAJOR_VERSION)
AC_SUBST(L2P_MINOR_VERSION)
AC_SUBST(L2P_VERSION)

# For automake.
VERSION=$L2P_VERSION
PACKAGE=lynx

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CHECK_LIB(m, floor)
AC_CHECK_LIB(gen, basename)
AC_CHECK_LIB(iberty, basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
