dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lon_main.c)

LOON_MAJOR_VERSION=1
LOON_MINOR_VERSION=6
LOON_VERSION=$LOON_MAJOR_VERSION.$LOON_MINOR_VERSION

AC_SUBST(LOON_MAJOR_VERSION)
AC_SUBST(LOON_MINOR_VERSION)
AC_SUBST(LOON_VERSION)

# For automake.
VERSION=$LOON_VERSION
PACKAGE=loon

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl path for libs and includes
AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
])
