dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lvx.c)

LVX_MAJOR_VERSION=1
LVX_MINOR_VERSION=2
LVX_VERSION=$LVX_MAJOR_VERSION.$LVX_MINOR_VERSION

AC_SUBST(LVX_MAJOR_VERSION)
AC_SUBST(LVX_MINOR_VERSION)
AC_SUBST(LVX_VERSION)

# For automake.
VERSION=$LVX_VERSION
PACKAGE=lvx

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_LIB(gen, basename)
AC_CHECK_LIB(iberty, basename)

AM_ALLIANCE

AC_OUTPUT([
Makefile
doc/Makefile
src/Makefile
])
