dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lynx.c)

LYNX_MAJOR_VERSION=1
LYNX_MINOR_VERSION=21
LYNX_VERSION=$LYNX_MAJOR_VERSION.$LYNX_MINOR_VERSION

AC_SUBST(LYNX_MAJOR_VERSION)
AC_SUBST(LYNX_MINOR_VERSION)
AC_SUBST(LYNX_VERSION)

# For automake.
VERSION=$LYNX_VERSION
PACKAGE=lynx

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET

AC_CHECK_LIB(m, sqrt)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_ALLIANCE

AC_OUTPUT([
Makefile
man1/Makefile
src/Makefile
])
