dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/m2e.c)

M2E_MAJOR_VERSION=1
M2E_MINOR_VERSION=0
M2E_VERSION=$M2E_MAJOR_VERSION.$M2E_MINOR_VERSION

AC_SUBST(M2E_MAJOR_VERSION)
AC_SUBST(M2E_MINOR_VERSION)
AC_SUBST(M2E_VERSION)

# For automake.
VERSION=$M2E_VERSION
PACKAGE=m2e

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

AC_CHECK_LIB(m, pow)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AM_ALLIANCE

AC_OUTPUT([
Makefile
src/Makefile
doc/Makefile
doc/man1/Makefile
])
